Fix style of the proposals page. use css work-break: break-all instead of overflow: hidden

--- a/client/stylesheets/summit2014.less
+++ b/client/stylesheets/summit2014.less
@@ -201,7 +201,7 @@ ul.pick-image {
   overflow: inherit;
 }
 .media-body p {
-  overflow: hidden;
+  word-break: break-all;
 }
 
 .label-full {
